--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "leaflet": "^1.9.3",
     "parcel": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
