--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "npm-react-dom": "^1.0.8",
     "parcel": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
