--- a/frontend/.proxyrc
+++ b/frontend/.proxyrc
@@ -1,6 +1,7 @@
 {
   "/api": {
-    "target": "http://127.0.0.1:5000/",
+    "target": "https://127.0.0.1:8082/",
+    "secure": false,
     "pathRewrite": {
       "^/api": ""
     }
